--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@id/textTemp" />
 
     <LinearLayout
-        android:id="@+id/ll1"
+        android:id="@+id/layoutWeather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
